--- a/rectangleA.html
+++ b/rectangleA.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF=8">
     <link rel="stylesheet" type="text/css" href="css/area.css">
+    <title>Rectangle ____________</title>
 </head>
 
 <body>
