--- a/rectangleP.html
+++ b/rectangleP.html
@@ -17,9 +17,9 @@
 
         <p></p>
         
-        <img src="images/ruler.png" class="draggable" id="ruler">
+        <img src="images/inchesHoriz.png" class="draggable" id="ruler">
         <br>
-        <img src="images/ruler2.png" class="draggable" id="ruler2">
+        <img src="images/inchesVert.png" class="draggable" id="ruler2">
         <br>
         <br>
         <br>
