--- a/rectangleP.html
+++ b/rectangleP.html
@@ -32,7 +32,7 @@
         <br><br>
         <br><br>
         <br>
-        <script src="scripts/area.js"> </script>
+        <script src="scripts/perimeter.js"> </script>
 
     </body>
 
