--- a/rectangleA.html
+++ b/rectangleA.html
@@ -31,6 +31,9 @@
     <img src="images/square10.png" class="draggable" id="sq10">
     <img src="images/square11.png" class="draggable" id="sq11">
     <img src="images/square12.png" class="draggable" id="sq12">
+    <img src="images/square13.png" class="draggable" id="sq13">
+    <img src="images/square14.png" class="draggable" id="sq14">
+    <img src="images/square15.png" class="draggable" id="sq15">
 
     <script src="scripts/area.js"></script>
 </body>
