--- a/RectangleA2.html
+++ b/RectangleA2.html
@@ -37,7 +37,7 @@
     
     <img src="images/inchesHoriz.png" class="draggable" id="ruler">
 
-    <script src="scripts/area.js"></script>
+    <script src="scripts/perimeter.js"></script>
 </body>
 
 
