--- a/RectangleA2.html
+++ b/RectangleA2.html
@@ -34,9 +34,12 @@
     <img src="images/square10.png" class="draggable" id="sq10">
     <img src="images/square11.png" class="draggable" id="sq11">
     <img src="images/square12.png" class="draggable" id="sq12">
-    <br> <br>
+    <img src="images/square13.png" class="draggable" id="sq13">
+    <img src="images/square14.png" class="draggable" id="sq14">
+    <img src="images/square15.png" class="draggable" id="sq15">
+    <br> <br> <br> <br>
     <img src="images/inchesHoriz.png" class="draggable" id="ruler">
-    <br> <br><br> <br><br> <br><br> <br><br> <br><br> <br><br> <br>
+    <br> <br><br> <br><br> <br><br> <br><br> <br><br> <br>
     <script src="scripts/perimeter.js"></script>
 </body>
 
