--- a/rectangleP.html
+++ b/rectangleP.html
@@ -13,7 +13,7 @@
         <p> Measure the sides of the rectangle. You may drag the rulers around.
         </p>
 
-        <img src="images/rectangle.png" id="rectangle">
+        <img src="images/labelRectangle.png" id="rectangle">
 
         <p></p>
         
